--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,11 @@
 @import 'base';
 
-body{
+*{
   margin: 0;
   padding: 0;
+}
+
+body{
   font-size: $font-size;
 }
 
@@ -11,16 +14,64 @@ body{
   min-height: 100vh;
 }
 
-h-full{
+.h-full{
   height: 100%;
+}
+
+.text-xs{
+  font-size: 0.5rem;
+}
+
+.text-sm{
+  font-size: 0.75rem;
+}
+
+.text-base{
+  font-size: 1rem;
+}
+
+.text-lg{
+  font-size: 1.25rem;
+}
+
+.text-xl{
+  font-size: 1.5rem;
+}
+
+.text-xxl{
+  font-size: 1.75rem;
+}
+
+.text-sl{
+  font-size: 2rem;
+}
+
+.font-light{
+  font-weight: 300;
+}
+
+.font-base{
+  font-weight: 400;
+}
+
+.font-bold{
+  font-weight: 500;
 }
 
 .flex{
   display: flex;
 }
 
+.flex-col{
+  flex-direction: column;
+}
+
 .justify-center{
   justify-content: center;
+}
+
+.justify-between{
+  justify-content: space-between;
 }
 
 .items-center{
@@ -41,4 +92,52 @@ h-full{
 
 .gap-2{
   gap: 0.5rem;
+}
+
+.gap-4{
+  gap: 1rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
+}
+
+.gap-8{
+  gap: 2rem;
+}
+
+.relative{
+  position: relative;
+}
+
+.absolute{
+  position: absolute;
+}
+
+.top-0{
+ top: 0
+}
+
+.bottom-0{
+  bottom: 0
+}
+
+.left-0{
+  left: 0
+}
+
+.right-0{
+  right: 0
+}
+
+.z-1{
+  z-index: 1;
+}
+
+.z-10{
+  z-index: 10;
+}
+
+.pointer-cursor{
+  cursor: pointer;
 }
