--- a/src/pages/Projects/FMSolution/TimeTrackDashboard/index.scss
+++ b/src/pages/Projects/FMSolution/TimeTrackDashboard/index.scss
@@ -31,6 +31,9 @@
           margin: 40px 0 100px;
         }
       }
+      &-name{
+        font-size: 2.5rem;
+      }
     }
 
     &-time{
@@ -38,7 +41,7 @@
       bottom: 0;
       &-item{
         background-color: transparent;
-        margin-bottom: 25px;
+        margin-bottom: 22px;
         border: none;
         outline: none;
         font-family: $font-family;
@@ -71,6 +74,38 @@
       }
       &-user{
         display: flex;
+        justify-content: space-between;
+        align-items: center;
+        &-avatar{
+          height: 60px;
+          width: 60px;
+          margin: 0;
+        }
+        &-pad{
+          margin-left: 20px;
+        }
+        &-name{
+          font-size: 1.5rem;
+        }
+      }
+
+      &-time{
+        display: flex;
+        bottom: 0;
+      }
+
+      &-pad{
+        height: 20%;
+        padding: 30px;
+        &-info{
+          margin-top: 20px;
+          &-main{
+            font-size: 2rem;
+          }
+          &-last{
+            margin-top: 4px;
+          }
+        }
       }
     }
   }
